p2-9-tuple-set-dict finish & update

--- a/p2-9-tuple-set-dict.ipynb
+++ b/p2-9-tuple-set-dict.ipynb
@@ -34,20 +34,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 24, 'hello')\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "t1 = (1, 24, 'hello')\n",
+    "print(t1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "type(t1)"
    ]
   },
   {
@@ -59,11 +79,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 24, 'hello') (1, 24, 'hello')\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "t2 = 1, 24, 'hello'\n",
+    "print(t1, t2)"
    ]
   },
   {
@@ -75,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,11 +120,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3,)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "t3 = (3,)\n",
+    "print(t3)\n",
+    "type(t3)"
    ]
   },
   {
@@ -107,11 +156,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "t1[2]"
    ]
   },
   {
@@ -134,11 +194,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "t1[0]"
    ]
   },
   {
@@ -150,11 +221,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "([1, 2], [4, 5])\n",
+      "([1, 2, 3], [4, 5])\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "a = [1, 2]\n",
+    "b = [4, 5]\n",
+    "t = a, b\n",
+    "print(t)\n",
+    "a.append(3)\n",
+    "print(t)"
    ]
   },
   {
@@ -193,11 +278,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 1, 1, 1, 1)\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "t = 1, 3, 'hello', True\n",
+    "t = 1, 1, 1, 1, 1\n",
+    "print(t)"
    ]
   },
   {
@@ -213,11 +308,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 3 hello True\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "start, end, s, f = t\n",
+    "print(start, end, s, f)"
    ]
   },
   {
@@ -277,20 +381,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'apple', 'orange', 'pear', 'banana'}\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "fruits = {'apple', 'orange', 'apple', 'pear', 'orange', 'banana'}\n",
+    "print(fruits)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "type(fruits)"
    ]
   },
   {
@@ -302,20 +426,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "'orange' in fruits"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "'coconut' in fruits"
    ]
   },
   {
@@ -327,20 +473,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "fruits.add('coconut')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "\n",
+    "'apples' in fruits"
    ]
   },
   {
@@ -359,11 +517,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'c', 'a', 'b', 'd', 'r'} {'m', 'c', 'l', 'a', 'z'}\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "a = set('abracadabra') \n",
+    "b = set('alacazam')\n",
+    "print(a, b)"
    ]
   },
   {
@@ -375,56 +543,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a', 'b', 'c', 'd', 'l', 'm', 'r', 'z'}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "a | b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a', 'c'}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "a & b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'b', 'd', 'r'}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "a - b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'b', 'd', 'l', 'm', 'r', 'z'}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "a ^ b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'b', 'd', 'r'}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "a - (a & b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'b', 'd', 'l', 'm', 'r', 'z'}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "(a | b) - (a & b)"
    ]
   },
   {
@@ -443,20 +677,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 coconut\n",
+      "1 pear\n",
+      "2 banana\n",
+      "3 orange\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "for index, fruit in enumerate(fruits):\n",
+    "    print(f'{index} {fruit}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'d', 'r'}\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "a = {x for x in 'abracadabra' if x not in 'abc'}\n",
+    "print(a)"
    ]
   },
   {
@@ -495,20 +750,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'cat': 'cute', 'dog': 'furry'}\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "pets = {'cat' : 'cute', 'dog' : 'furry'}\n",
+    "print(pets)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "type(pets)"
    ]
   },
   {
@@ -520,11 +795,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " cat\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cute\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def find_pet(name):\n",
+    "    if name in pets:\n",
+    "        print(pets[name])\n",
+    "    else:\n",
+    "        print(f\"没有找到{name}的信息\")\n",
+    "        \n",
+    "name = input()\n",
+    "find_pet(name)"
    ]
   },
   {
@@ -540,11 +837,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "没有找到fish的信息\n",
+      "wet\n",
+      "furry\n",
+      "brave\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "find_pet('fish')\n",
+    "pets['fish'] = 'wet'\n",
+    "find_pet('fish')\n",
+    "\n",
+    "find_pet('dog')\n",
+    "pets['dog'] = 'brave'\n",
+    "find_pet('dog')"
    ]
   },
   {
@@ -556,11 +870,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N/A\n",
+      "wet\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "# print(pet['monkey'])\n",
+    "\n",
+    "print(pets.get('monkey', 'N/A'))\n",
+    "print(pets.get('fish', 'N/A'))\n"
    ]
   },
   {
@@ -572,11 +898,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "没有找到fish的信息\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "if 'fish' in pets:\n",
+    "    del pets['fish']\n",
+    "    \n",
+    "find_pet('fish')\n"
    ]
   },
   {
@@ -597,29 +934,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "d = {'person': 2, 'cat': 4, 'spider': 8}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A person has 2 legs\n",
+      "A cat has 4 legs\n",
+      "A spider has 8 legs\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "for animal in d:\n",
+    "    legs = d[animal]\n",
+    "    print(f'A {animal} has {legs} legs')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A person has 2 legs\n",
+      "A cat has 4 legs\n",
+      "A spider has 8 legs\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "for animal, legs in d.items():\n",
+    "    print(f'A {animal} has {legs} legs')"
    ]
   },
   {
@@ -638,11 +998,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 0, 2: 4, 4: 16}\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "nums = [0, 1, 2, 3, 4]\n",
+    "even_num_to_square = {x : x ** 2 for x in nums if x % 2 == 0}\n",
+    "print(even_num_to_square)"
    ]
   },
   {
@@ -726,11 +1096,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "prices = {'apple': 1.99, 'banana': 0.99, 'orange': 1.49, 'cantaloupe': 3.99, 'grapes': 0.39}"
    ]
   },
   {
@@ -742,11 +1112,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('apple', 1.99), ('banana', 0.99), ('cantaloupe', 3.99), ('grapes', 0.39), ('orange', 1.49)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "print(sorted(prices.items()))"
    ]
   },
   {
@@ -774,11 +1152,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('grapes', 0.39), ('banana', 0.99), ('orange', 1.49), ('apple', 1.99), ('cantaloupe', 3.99)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "print(sorted(prices.items(), key=lambda x:x[1]))"
    ]
   },
   {
@@ -797,11 +1183,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('cantaloupe', 3.99), ('apple', 1.99), ('orange', 1.49), ('banana', 0.99), ('grapes', 0.39)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "print(sorted(prices.items(), key=lambda x:x[1], reverse=True))"
    ]
   },
   {
@@ -822,11 +1216,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "person1 = {'name': 'Neo', 'age': 30, 'height': 175}\n",
+    "person2 = {'name': 'Trinity', 'age': 29, 'height': 169}\n",
+    "person3 = {'name': 'Morpheus', 'age': 43, 'height': 180}"
    ]
   },
   {
@@ -838,11 +1234,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "data = [person1, person2, person3]"
    ]
   },
   {
@@ -854,11 +1250,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Morpheus', 'age': 43, 'height': 180}, {'name': 'Neo', 'age': 30, 'height': 175}, {'name': 'Trinity', 'age': 29, 'height': 169}]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "data.sort(key=lambda x:x['name'])\n",
+    "print(data)"
    ]
   },
   {
@@ -870,11 +1275,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Trinity', 'age': 29, 'height': 169}, {'name': 'Neo', 'age': 30, 'height': 175}, {'name': 'Morpheus', 'age': 43, 'height': 180}]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "data.sort(key=lambda x:x['age'])\n",
+    "print(data)"
    ]
   },
   {
@@ -886,11 +1300,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Morpheus', 'age': 43, 'height': 180}, {'name': 'Neo', 'age': 30, 'height': 175}, {'name': 'Trinity', 'age': 29, 'height': 169}]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "data.sort(key=lambda x:x['height'], reverse=True)\n",
+    "print(data)"
    ]
   },
   {
