--- a/p2-a-tree.ipynb
+++ b/p2-a-tree.ipynb
@@ -132,11 +132,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class TreeNode:\n",
+    "    def __init__(self, name='root', data=None, parents=None, children=None):\n",
+    "        self.name = name\n",
+    "        self,data = data\n",
+    "        assert isinstance(parents, TreeNode)\n",
+    "        self.parents = parents\n",
+    "        self.children = []\n",
+    "        if children != None:\n",
+    "            for child in children:\n",
+    "                self.add_child(child)\n",
+    "                \n",
+    "    def add_child(self, node):\n",
+    "        assert isinstance(node, TreeNode)\n",
+    "        node.prent = self\n",
+    "        self.children.append(node)\n",
+    "                "
    ]
   },
   {
