--- a/p2-7-iterable-iterator.ipynb
+++ b/p2-7-iterable-iterator.ipynb
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
        "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +530,17 @@
     "            \n",
     "        self.next = n + 1\n",
     "        return n\n",
-    "\n",
+    "        \n",
+    "        \n",
+    "#     def __next__(self):\n",
+    "#         n = self.next\n",
+    "#         while self._is_prime(n):\n",
+    "#             self.next = n + 1\n",
+    "#             return n\n",
+    "        \n",
+    "#         self.next += 1\n",
+    "        \n",
+    "        \n",
     "list(islice(primes(), 0, 10))   "
    ]
   },
@@ -547,34 +557,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'primes' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-38306e130d22>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mislice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprimes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: 'primes' object is not iterable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def primes():\n",
-    "    base = 2\n",
-    "     if n in (2, 3):\n",
-    "            return True\n",
-    "                \n",
-    "        for i in range(2, int(n**0.5)+1):\n",
-    "            if n % i == 0:\n",
-    "                return False\n",
-    "                \n",
-    "        return True\n",
-    "\n",
-    "\n"
+    "    \n",
+    "    D = {}\n",
+    "    q = 2\n",
+    "    while 1:\n",
+    "        if q not in D:\n",
+    "            yield \n",
+    "    "
    ]
   },
   {
