--- a/test.ipynb
+++ b/test.ipynb
@@ -2,80 +2,232 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TreeNode:\n",
+    "    def __init__(self, name='root', data=None, parent=None, children=None):\n",
+    "        self.name = name\n",
+    "        self.data = data\n",
+    "        \n",
+    "        if parent:\n",
+    "            assert isinstance(parent, TreeNode)\n",
+    "            parent.add_child(self)\n",
+    "        self.parent = parent\n",
+    "    \n",
+    "        self.children = []\n",
+    "        if children:\n",
+    "            for child in children:\n",
+    "                self.add_child(child)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    def show_parent_node(self):\n",
+    "        \n",
+    "        if self.parent:\n",
+    "            return f'{self.parent}'\n",
+    "        else:\n",
+    "            return f'{self.name} have no parent node.'       \n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "    def show_child_nodes(self):\n",
+    "        \n",
+    "        if self.children:\n",
+    "            return self.children\n",
+    "        else:\n",
+    "            return f'{self.name} have no child nodes.'\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "\n",
+    "    def find_child(self, node):\n",
+    "        assert isinstance(node, TreeNode)\n",
+    "        \n",
+    "        if node in self.children:\n",
+    "            return node\n",
+    "        else:\n",
+    "            return f'{node.name} have not been found in {self.name}.'\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "    def show_sibling_nodes(self):\n",
+    "        \n",
+    "        if self.parent:\n",
+    "            return f'{self.name} have sibling nodes: {self.parent.children}.'\n",
+    "        \n",
+    "        \n",
+    "                \n",
+    "    def show_descendants(self):\n",
+    "        _descendants = []\n",
+    "        _descendants = self._find_descendants(_descendants)\n",
+    "        descendants = [x.name for x in _descendants]\n",
+    "        return f'{self.name}\\'s descendants: {descendants}'\n",
+    "           \n",
+    "    def _find_descendants(self, descendants):\n",
+    "        \n",
+    "        if self.children:\n",
+    "            descendants.extend(self.children)\n",
+    "            for child in self.children:\n",
+    "                print(\"i am right\")\n",
+    "                child._find_descendants(descendants)\n",
+    "                \n",
+    "#         else:\n",
+    "#             print('yap!')\n",
+    "#             return descendants\n",
+    "        \n",
+    "        print('NO!')\n",
+    "        return descendants\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "    def find_path_and_dist(self, node):\n",
+    "        self.descendants = self._find_descendants()\n",
+    "        \n",
+    "        if node in self.descendants:\n",
+    "            \n",
+    "            start_node = node\n",
+    "            end_node = self\n",
+    "            _path = []\n",
+    "            path = _find_path_and_dist(start_node, end_node, _path = [])\n",
+    "            return f'The path from {self.name} to {node.name} is {path}; and the distance is {len(path)}'\n",
+    "    \n",
+    "        else:\n",
+    "            start_node = self\n",
+    "            end_node = node\n",
+    "            path = _find_path_and_dist(start_node, end_node)\n",
+    "            return f'The path from {self.name} to {node.name} is {path}; and the distance is {len(path)}'\n",
+    "\n",
+    "                \n",
+    "    def _find_path_and_dist(self, start_node, end_node, path = []):\n",
+    "        \n",
+    "        assert isinstance(start_node, TreeNode)\n",
+    "        assert isinstance(end_node, TreeNode)\n",
+    "         \n",
+    "        if not start_node.parent == end_node:\n",
+    "                path.append(start_node.parent)\n",
+    "                end_node.find_path_and_dist(start_node.parent)\n",
+    "        else:\n",
+    "            path.reverse()\n",
+    "            return path\n",
+    "       \n",
+    "    \n",
+    "    \n",
+    "        \n",
+    "    def show_tier(self):\n",
+    "        _tier_path = []\n",
+    "        tier = len(self._tier_path(_tier_path))\n",
+    "        \n",
+    "        return f'The node tier is {tier}.'       \n",
+    "        \n",
+    "    def __tier(self, tier_path):\n",
+    "        \n",
+    "        if not self.parent.name == 'root':\n",
+    "            tier_path.append(self.parent)\n",
+    "            self.parent.__tier(tier_path)\n",
+    "        else:\n",
+    "            return tier_path\n",
+    "           \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    def add_child(self, node):\n",
+    "        assert isinstance(node, TreeNode)\n",
+    "        node.parent = self\n",
+    "        self.children.append(node)\n",
+    "        \n",
+    "    def del_node(self):\n",
+    "        if parent:\n",
+    "            parent.children.pop(node)\n",
+    "            \n",
+    "        if children:\n",
+    "            for child in children:\n",
+    "                assert isinstance(child, TreeNode)\n",
+    "                child.parent = None\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    def parents_modify(self, new_parent):\n",
+    "        assert isinstance(new_parent, TreeNode)\n",
+    "        self.parent = new_parent\n",
+    "        new_parent.add_child(self)\n",
+    "        \n",
+    "root = TreeNode()\n",
+    "child1 = TreeNode(name='child1', data=None, parent=root, children=None)\n",
+    "child2 = TreeNode(name='child2', data=None, parent=root, children=None)\n",
+    "child3 = TreeNode(name='child3', data=None, parent=child1, children=None)\n",
+    "child4 = TreeNode(name='child4', data=None, parent=child1, children=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "请输'b'（表示“大”）或者's'（表示“小”）或按'q'退出游戏。 b\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "骰子是2\n",
-      "电脑赢了你！你扣一分\n",
-      "请输'b'（表示“大”）或者's'（表示“小”）或按'q'退出游戏。\n"
+      "i am right\n",
+      "i am right\n",
+      "NO!\n",
+      "i am right\n",
+      "NO!\n",
+      "NO!\n",
+      "i am right\n",
+      "NO!\n",
+      "NO!\n"
      ]
     },
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "骰子是6\n",
-      "电脑赢了你！你扣一分\n",
-      "请输'b'（表示“大”）或者's'（表示“小”）或按'q'退出游戏。\n"
-     ]
+     "data": {
+      "text/plain": [
+       "\"root's descendants: ['child1', 'child2', 'child3', 'child4']\""
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from random import randrange\n",
-    "\n",
-    "\n",
-    "\n",
-    "def betgame(dice, wager):\n",
-    "    \n",
-    "    BotPoint = 10\n",
-    "    PlayerPoint = 10\n",
-    "    \n",
-    "    \n",
-    "    if (dice > 7) & (wager == 's'):\n",
-    "        print(f'骰子是{dice}\\n你赢了电脑！电脑扣一分')\n",
-    "        BotPoint -= 1\n",
-    "        \n",
-    "    elif (dice < 7) & (wager == 'b'):\n",
-    "        print(f'骰子是{dice}\\n电脑赢了你！你扣一分')\n",
-    "        PlayerPoint -= 1\n",
-    "        \n",
-    "    elif (dice < 7) & (wager == 'b'):\n",
-    "        print(f'骰子是{dice}\\n你赢了电脑！电脑扣一分')\n",
-    "        BotPoint -= 1\n",
-    "        \n",
-    "    elif (dice < 7) & (wager == 's'):\n",
-    "        print(f'骰子是{dice}\\n电脑赢了你！你扣一分')\n",
-    "        PlayerPoint -= 1 \n",
-    "        \n",
-    "    \n",
-    "\n",
-    "wager_1 = input(\"请输'b'（表示“大”）或者's'（表示“小”）或按'q'退出游戏。\")\n",
-    "while wager_1  != 'q': \n",
-    "    dice_1 = randrange(2,13)\n",
-    "    betgame(dice_1, wager_1)\n",
-    "    print(\"请输'b'（表示“大”）或者's'（表示“小”）或按'q'退出游戏。\")\n",
-    "    wager_1 = input()\n",
-    "\n",
-    "    \n",
-    "\n"
+    "root.show_descendants() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test(a):\n",
+    "    if a:\n",
+    "        print('1')\n",
+    "    else:\n",
+    "        return '2'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2'"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = []\n",
+    "test(a)"
    ]
   }
  ],
